--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -11,14 +11,44 @@
 	justify-content: space-between;
 }
 
+.input input::-webkit-outer-spin-button,
+.input input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+.input input[type='number'] {
+	-moz-appearance: textfield;
+}
+
 .input input {
-	border: none;
+	border: 1px solid black;
 	outline: none;
-	background: #f4f4f5;
+	/* background: #f4f4f5; */
+	background: #000;
+	color: white;
 	font-size: 1.6rem;
-	border-radius: 0.2rem;
-	padding: 0.8rem 0 0.8rem 0.5rem;
-	box-shadow: inset 0 2px 2px lightgray;
+	border-radius: 8px;
+	padding: 0rem 1.5rem 0rem 0.5rem;
+	/* box-shadow: inset 0 2px 2px lightgray; */
+	font-family: var(--f-bi);
+	font-size: 3rem;
+	width: 20.5rem;
+	height: 5rem;
+	text-align: right;
+	caret-color: transparent;
+}
+
+@media (max-width: 728px) {
+	.input input {
+		width: 70%;
+		height: 3rem;
+		font-size: 2rem;
+	}
+}
+
+.input input:focus {
+	outline: 10px solid #3dc0c0;
 }
 
 .range {
@@ -38,17 +68,17 @@
 	-webkit-appearance: none;
 	width: 100%;
 	height: 2.2rem;
-	background: #eee;
+	background: rgb(255, 175, 175);
 	margin-top: 1.2ram;
-	border-radius: 5rem;
-	outline-color: #5bceae;
+	border-radius: 8px;
+	outline-color: #3dc0c0;
 }
 
 .range input::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	width: 2.2rem;
 	height: 2.2rem;
-	border-radius: 50%;
+	border-radius: 8px;
 	background: #3dc0c0;
 	cursor: pointer;
 }
@@ -57,7 +87,7 @@
 	-webkit-appearance: none;
 	width: 2.2rem;
 	height: 2.2rem;
-	border-radius: 50%;
+	border-radius: 8px;
 	background: #3dc0c0;
 	cursor: pointer;
 	border: none;
