--- a/src/components/UI/Section.module.css
+++ b/src/components/UI/Section.module.css
@@ -5,4 +5,7 @@
 	background-color: rgb(255, 255, 255);
 	padding: 1rem;
 	border-radius: 8px;
+	box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 1);
+	-webkit-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 1);
+	-moz-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 1);
 }
